加入用户名后端校验

--- a/mysite/isadmin/templates/isadmin/index.html
+++ b/mysite/isadmin/templates/isadmin/index.html
@@ -330,14 +330,14 @@
                                 <b class="arrow"></b>
                             </li>
 
-                            <li class="sidebar-item">
+                            <!-- <li class="sidebar-item">
                                 <a href="/isadmin/dcbp_list" target="main-iframe">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     定时任务表
                                 </a>
 
                                 <b class="arrow"></b>
-                            </li>
+                            </li> -->
                         </ul>
                     </li>
 
